# fpRust

./: .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  SECURITY.md  clippy.sh  paralleltest.sh  publish.sh  test.sh
.github/workflows/: ci.yml
docs/: PROJECT_NOTES.md
examples/: actor.rs  actor_ask.rs  cor.rs  do_notation.rs  fp.rs  monadio.rs  publisher.rs  publisher_queue.rs  scheduler.rs
src/: actor.rs  common.rs  cor.rs  fp.rs  handler.rs  lib.rs  maybe.rs  monadio.rs  publisher.rs  sync.rs
