[package]
name = "fp_rust"
version = "0.3.4"
license = "MIT"
authors = ["JunYi JohnTeee Lee <johnteee@gmail.com>"]
edition = "2018"
include = ["src/**/*.rs", "Cargo.toml"]
readme = "README.md"
description = "Implement fp features for Rust"
documentation = "https://docs.rs/fp_rust/"
homepage = "https://github.com/TeaEntityLab/fpRust"
repository = "https://github.com/TeaEntityLab/fpRust"
keywords = ["functional","rx","monad","optional","pubsub"]

[badges.maintenance]
status = "actively-developed"

[lib]
name = "fp_rust"
path = "src/lib.rs"

[features]
default = [
  "pure",
  # "for_futures",
]
for_futures = [ "futures", "futures-test" ]
# for_futures = [ "futures", "tokio" ]
pure = [
  "fp",
  "maybe",
  "sync",
  "cor",
  "actor",
  "handler",
  "monadio",
  "publisher",
]
fp = [ ]
maybe = [ ]
sync = [ ]
cor = [ ]
actor = [ "sync" ]
handler = [ "sync" ]
monadio = [ "sync", "handler" ]
publisher = [ "sync", "handler" ]

# For test
test_runtime = [ "pure", "for_futures" ]

[dependencies]
# tokio = { version = "^1.9.0", features = ["full"], optional = true }
futures = { version = "0.3", default-features = false, features = ["thread-pool"], optional = true }
futures-test = { version = "0.3", optional = true }
