[package]
name = "fp_rust"
version = "0.3.5"
license = "MIT"
authors = ["JunYi JohnTeee Lee <johnteee@gmail.com>"]
edition = "2021"
rust-version = "1.56"
include = ["src/**/*.rs", "Cargo.toml", "LICENSE", "README.md"]
readme = "README.md"
description = "Implement fp features for Rust"
documentation = "https://docs.rs/fp_rust/"
homepage = "https://github.com/TeaEntityLab/fpRust"
repository = "https://github.com/TeaEntityLab/fpRust"
keywords = ["functional","rx","monad","optional","pubsub"]

[badges.maintenance]
status = "passively-maintained"

# docs.rs builds default features only; enable `for_futures` so the async/Rx
# surface (Future/Stream impls, *_as_future, to_future, stream helpers) is
# documented on docs.rs instead of being hidden.
[package.metadata.docs.rs]
features = ["for_futures"]

[lib]
name = "fp_rust"
path = "src/lib.rs"

[features]
default = [
  "pure",
  # "for_futures",
]
for_futures = [ "futures", "futures-test" ]
pure = [
  "fp",
  "maybe",
  "sync",
  "cor",
  "actor",
  "handler",
  "monadio",
  "publisher",
]
fp = [ ]
maybe = [ ]
sync = [ ]
cor = [ ]
actor = [ "sync" ]
handler = [ "sync" ]
monadio = [ "sync", "handler" ]
publisher = [ "sync", "handler" ]

# For test
test_runtime = [ "pure", "for_futures" ]

[dependencies]
futures = { version = "0.3", default-features = false, features = ["thread-pool"], optional = true }
futures-test = { version = "0.3", optional = true }
